--- a/client/src/app/components/log-in/log-in.component.html
+++ b/client/src/app/components/log-in/log-in.component.html
@@ -3,16 +3,17 @@
     <mat-card-header>
       <mat-card-title>Log in</mat-card-title>
     </mat-card-header>
-    <form class="example-form">
+    <form #loginForm="ngForm" class="example-form" (ngSubmit)="login(loginForm.value)">
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username">
+          <input type="text" name="email" ngModel matInput placeholder="Username">
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password">
+          <input type="password" name="password" ngModel matInput placeholder="Password">
         </mat-form-field>
       </mat-card-content>
       <button mat-stroked-button color="accent" class="btn-block">Log in</button>
     </form>
+    <p style="text-align: center; margin-top: 15px;">Not a member? <a routerLink="/register"> Sign up now!</a></p>
   </mat-card>
 </div>
