--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -6,13 +6,13 @@
     <form #registerForm="ngForm" class="example-form" (ngSubmit)="register(registerForm.value)">
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input name="username" ngModel matInput placeholder="Username">
+          <input type="text" name="username" ngModel matInput placeholder="Username">
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <input name="email" ngModel matInput placeholder="Email">
+          <input type="text" name="email" ngModel matInput placeholder="Email">
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <input name="password" ngModel matInput placeholder="Password">
+          <input type="password" name="password" ngModel matInput placeholder="Password">
         </mat-form-field>
       </mat-card-content>
       <button mat-stroked-button color="accent" class="btn-block" type="submit">Register</button>
