--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -1,4 +1,21 @@
-.content{
-  padding: 15px;
+.grid-container {
+  margin: 20px;
 }
+
+.card-deck-container {
+  position: relative;
+  border-radius: 2px;
+  padding: 10px 10px 30px;
+  margin: 10px 10px 10px 10px;
+  background-color: #f5f5f5;
+}
+
+.card-item {
+  padding: 3px 3px 3px 3px;
+}
+
+.container {
+  height: 100vh;
+}
+
 
