--- a/client/src/app/components/photo/photo.component.scss
+++ b/client/src/app/components/photo/photo.component.scss
@@ -1,3 +1,9 @@
-mat-card{
-  width: 200px;
+img {
+  height: 300px;
+  max-width: 100%;
+  padding: 15px;
+}
+.mat-card {
+  width: 250px;
+  border-radius: 3%;
 }
